--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="regret">Regret</string>
+    <string name="skill">Skill</string>
+    <string name="fun">Fun</string>
+    <string name="responsibility">Responsibility</string>
+    <string name="leisure">Leisure</string>
+    <string name="dateofbirth">Date of birth</string>
 </resources>
