--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="responsibility">Responsibility</string>
     <string name="leisure">Leisure</string>
     <string name="dateofbirth">Date of birth</string>
+    <string name="error_date">Use format \'DD.MM.YYYY\'</string>
 </resources>
