--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="todays_score">Today\'s Score</string>
     <string name="spent_time">Spent Time</string>
     <string name="evaluation">Evaluation</string>
+    <string name="title_activity_new_activity">New Activity</string>
 </resources>
