--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="name">Name</string>
     <string name="date">Date</string>
     <string name="error_time">Use format \'hh:mm\'</string>
+    <string name="save">Save</string>
 </resources>
