Automatically set date and accept minutes for duration as well

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="title_activity_new_activity">New Activity</string>
     <string name="name">Name</string>
     <string name="date">Date</string>
-    <string name="error_time">Use format \'hh:mm\'</string>
+    <string name="error_time">Invalid duration</string>
     <string name="save">Save</string>
     <string name="invalid_inputs">Some inputs are invalid</string>
 </resources>
