--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="save">Save</string>
     <string name="invalid_inputs">Some inputs are invalid</string>
     <string name="satisfaction">How satisfied are you with your day?</string>
+    <string name="export">Export data</string>
 </resources>
