--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="invalid_inputs">Some inputs are invalid</string>
     <string name="satisfaction">How satisfied are you with your day?</string>
     <string name="export">Export data</string>
+    <string name="error_export">Error while exporting data</string>
 </resources>
